--- a/1.Series.ipynb
+++ b/1.Series.ipynb
@@ -76,14 +76,38 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0      choco\n",
+       "1    vanilla\n",
+       "2      straw\n",
+       "3       dark\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.Series(ice_cream)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "pd"
-   ]
+   "source": []
   }
  ],
  "metadata": {
